--- a/views/include/_header.ejs
+++ b/views/include/_header.ejs
@@ -273,16 +273,24 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
 
         <script>
-            document.getElementById("order").addEventListener("click", function(e) {
+            document.getElementById("order").addEventListener("click", function() {
                 const admin = JSON.parse(localStorage.getItem('admin'));
                 if (admin) {
-                    window.location.replace("https://origano-admin.herokuapp.com/orders?id=" + admin._id);
+                    if (admin.role == "company") {
+                        window.location.replace("https://origano-admin.herokuapp.com/orders?id=" + admin._id);
+                    } else {
+                        window.location.replace("https://origano-admin.herokuapp.com/orders");
+                    }
                 }
             });
-            document.getElementById("food").addEventListener("click", function(e) {
+            $("#food").on("click", function() {
                 const admin = JSON.parse(localStorage.getItem('admin'));
                 if (admin) {
-                    window.location.replace("https://origano-admin.herokuapp.com/foodsection?id=" + admin._id);
+                    if (admin.role == "company") {
+                        window.location.replace("https://origano-admin.herokuapp.com/foodsection?id=" + admin._id);
+                    } else {
+                        window.location.replace("https://origano-admin.herokuapp.com/foodsection");
+                    }
                 }
             });
             $(document).ready(function() {
