business render update

--- a/views/business.ejs
+++ b/views/business.ejs
@@ -43,6 +43,7 @@
                                             <th>ISFC</th>
                                             <th>Service</th>
                                             <th>Since</th>
+                                            <th>Action</th>
                                         </tr>
                                     </thead>
                                     <tbody>
