--- a/views/include/_showorders.ejs
+++ b/views/include/_showorders.ejs
@@ -15,6 +15,9 @@
         <td>
             <%=ord.totalAmount%>
         </td>
+        <td>
+            <%=ord.providerName%>
+        </td>
 
     </tr>
 
