--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -30,6 +30,7 @@
                                             <th>User Name</th>
                                             <th>Quantity</th>
                                             <th>Total Amount</th>
+                                            <th>Provider Name</th>
                                         </tr>
                                     </thead>
                                     <tbody>
