--- a/views/updateFoodSection.ejs
+++ b/views/updateFoodSection.ejs
@@ -62,8 +62,8 @@
                                     </div>
                                     <div class="form-group">
                                         <label for="photo ">Food Images</label>
-                                        <input type="file" id="photoFile" value="" class="form-control ">
-                                        <textarea id="photo" name="photo" value="<%=food.photo%>" hidden></textarea>
+                                        <input type="file" id="photoFile" value="<%=food.photo%>" class="form-control ">
+                                        <textarea id="photo" name="photo" value="" hidden></textarea>
                                     </div>
 
                                     <div class="form-group">
@@ -72,7 +72,7 @@
                                     </div>
                                     <div class="form-group">
                                         <label for="description ">Description</label>
-                                        <input type="text " name="description" value="<%=food.description%>" class="form-control " id="description" placeholder="Business Address">
+                                        <input type="text " name="description" value="<%=food.description%>" class="form-control " id="description" placeholder="food description">
                                     </div>
                                 </div>
                                 <!-- /.card-body -->
